mejoras responsive y css

--- a/index.html
+++ b/index.html
@@ -57,37 +57,37 @@
       <img src="http://www.ninoycancer.cl/JL/portada_libro.jpg" class="img-thumbnail" alt="Portada de libro">
       <h4>Ex paciente publica un libro</h4>
       <p>¡Hola! Mi nombre es Marlene Zavala, tuve retinoblastoma bilateral, ya hace muchos años. Por esta razón realicé mi proyecto de título sobre el cáncer infantil</p>
-
     </div>
   </div>
-
 </div>
 <footer class="lugarfooter">
   <div class="footer-copyright text-center py-3 colorfoot">
     <div class="container-fluid">
       <div class="row">
         <div class="col-12 col-md-6 col-xl-4">
-          <div class="footer-copyright text-center py-3 colorfoot">Email: fundacion@ninoycancer.cl
+          <p class="negrita">Información de contacto</p>
+          <div class="footer-copyright text-center py-1 colorfoot">Email: fundacion@ninoycancer.cl
           </div>
-          <div class="footer-copyright text-center py-3 colorfoot">Fax: 22170820
+          <div class="footer-copyright text-center py-1 colorfoot">Fax: 22170820
           </div>
-          <div class="footer-copyright text-center py-3 colorfoot"><a href="https://www.facebook.com/ninoycancer/">Facebook</a>
+          <div class="footer-copyright text-center py-1 colorfoot"><a href="https://www.facebook.com/ninoycancer/">Facebook</a>
           </div>
-          <div class="footer-copyright text-center py-3 colorfoot">Fono de contacto: (2) 2217 0811</div>
+          <div class="footer-copyright text-center py-1 colorfoot">Fono de contacto: (2) 2217 0811</div>
         </div>
         <div class="col-12 col-md-6 col-xl-4">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13326.047386104729!2d-70.5368983!3d-33.3838082!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x75682cb0ad81a60e!2sFundaci%C3%B3n+Ni%C3%B1o+y+Cancer!5e0!3m2!1ses-419!2scl!4v1546015379381" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+          <p class="negrita">Nuestra ubicación</p>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13326.047386104729!2d-70.5368983!3d-33.3838082!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x75682cb0ad81a60e!2sFundaci%C3%B3n+Ni%C3%B1o+y+Cancer!5e0!3m2!1ses-419!2scl!4v1546015379381" max-width="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
           <div class="col-12 col-md-12 col-xl-4">
             <form>
-          <div class="form-group">
-            <label for="exampleInputEmail1">Ingrese su email</label>
+          <div class="form-group form-group-lg">
+            <label class="negrita" for="exampleInputEmail1">Ingrese su email</label>
             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ingrese su email">
             <small id="emailHelp" class="form-text text-muted">Información exclusiva para la Fundación niños y cáncer</small>
           </div>
           <button type="submit" class="btn btn-primary">¿Desea recibir información?</button>
-        </div>
       </form>
+        </div>
       </div>
     </div>
   </div>
