--- a/nosotros.html
+++ b/nosotros.html
@@ -10,71 +10,67 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="index.html">Home</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="nosotros.html">Nosotros<span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="noticias.html">Noticias</a>
-      </li>
-    </ul>
-  </div>
+    <a class="navbar-brand" href="index.html">Home</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="nosotros.html">Nosotros<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="noticias.html">Noticias</a>
+        </li>
+      </ul>
+    </div>
   </nav>
   <div class="center">
       <h1>¿Quienes somos?</h1>
-        <p>El objetivo general de la Fundación es contribuir con el tratamiento integral de los niños con cáncer y leucemia del país (Plan AUGE y GES), ayudando a su desarrollo integral, mejorando su calidad de vida y fortaleciendo su integración social y familiar.</p>
-        <br>
-        <p>En el año 1992 se creó la Fundación Oncológica Las Condes, atendiendo a niños y adultos con cáncer. En el año 2000 se modifican sus estatutos según el decreto N° 994 publicado en el Diario Oficial N° 36817, para atender solamente a niños con cáncer.</p>
-        <h4>Directorio ejecutivo</h4>
-        <br>
-        <p>Está integrado por un grupo de profesionales y empresarios de reconocida trayectoria, cuyo principal objetivo es la obtención de recursos para los distintos proyectos.</p>
-        <br>
-        <img src="http://www.ninoycancer.cl/JL/Equipo/CReunion_2011_027.jpg" alt="Directorio ejecutivo" class="img-fluid">
-      </div>
-
-
-
-
-
-
-
-      <footer class="lugarfooter">
-        <div class="footer-copyright text-center py-3 colorfoot">
-          <div class="container-fluid">
-            <div class="row">
-              <div class="col-12 col-md-6 col-xl-4">
-                <div class="footer-copyright text-center py-3 colorfoot">Email: fundacion@ninoycancer.cl
-                </div>
-                <div class="footer-copyright text-center py-3 colorfoot">Fax: 22170820
-                </div>
-                <div class="footer-copyright text-center py-3 colorfoot"><a href="https://www.facebook.com/ninoycancer/">Facebook</a>
-                </div>
-                <div class="footer-copyright text-center py-3 colorfoot">Fono de contacto: (2) 2217 0811</div>
-              </div>
-              <div class="col-12 col-md-6 col-xl-4">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13326.047386104729!2d-70.5368983!3d-33.3838082!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x75682cb0ad81a60e!2sFundaci%C3%B3n+Ni%C3%B1o+y+Cancer!5e0!3m2!1ses-419!2scl!4v1546015379381" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-              </div>
-                <div class="col-12 col-md-12 col-xl-4">
-                  <form>
-                <div class="form-group">
-                  <label for="exampleInputEmail1">Ingrese su email</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ingrese su email">
-                  <small id="emailHelp" class="form-text text-muted">Información exclusiva para la Fundación niños y cáncer</small>
-                </div>
-                <button type="submit" class="btn btn-primary">¿Desea recibir información?</button>
-              </div>
-            </form>
+      <p>El objetivo general de la Fundación es contribuir con el tratamiento integral de los niños con cáncer y leucemia del país (Plan AUGE y GES), ayudando a su desarrollo integral, mejorando su calidad de vida y fortaleciendo su integración social y familiar.</p>
+      <br>
+      <p>En el año 1992 se creó la Fundación Oncológica Las Condes, atendiendo a niños y adultos con cáncer. En el año 2000 se modifican sus estatutos según el decreto N° 994 publicado en el Diario Oficial N° 36817, para atender solamente a niños con cáncer.</p>
+      <h4>Directorio ejecutivo</h4>
+      <br>
+      <p>Está integrado por un grupo de profesionales y empresarios de reconocida trayectoria, cuyo principal objetivo es la obtención de recursos para los distintos proyectos.</p>
+      <br>
+      <img src="http://www.ninoycancer.cl/JL/Equipo/CReunion_2011_027.jpg" alt="Directorio ejecutivo" class="img-fluid">
+  </div>
+  <br>
+  <footer class="lugarfooter">
+    <div class="footer-copyright text-center py-3 colorfoot">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12 col-md-6 col-xl-4">
+            <p class="negrita">Información de contacto</p>
+            <div class="footer-copyright text-center py-1 colorfoot">Email: fundacion@ninoycancer.cl
             </div>
+            <div class="footer-copyright text-center py-1 colorfoot">Fax: 22170820
+            </div>
+            <div class="footer-copyright text-center py-1 colorfoot"><a href="https://www.facebook.com/ninoycancer/">Facebook</a>
+            </div>
+            <div class="footer-copyright text-center py-1 colorfoot">Fono de contacto: (2) 2217 0811</div>
+          </div>
+          <div class="col-12 col-md-6 col-xl-4">
+            <p class="negrita">Nuestra ubicación</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13326.047386104729!2d-70.5368983!3d-33.3838082!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x75682cb0ad81a60e!2sFundaci%C3%B3n+Ni%C3%B1o+y+Cancer!5e0!3m2!1ses-419!2scl!4v1546015379381" max-width="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
+          </div>
+            <div class="col-12 col-md-12 col-xl-4">
+              <form>
+            <div class="form-group form-group-lg">
+              <label class="negrita" for="exampleInputEmail1">Ingrese su email</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ingrese su email">
+              <small id="emailHelp" class="form-text text-muted">Información exclusiva para la Fundación niños y cáncer</small>
+            </div>
+            <button type="submit" class="btn btn-primary">¿Desea recibir información?</button>
+        </form>
           </div>
         </div>
-      </footer>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-      </body>
-      </html>
+      </div>
+    </div>
+  </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+  </body>
+  </html>
